5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1593_2908.log
== TEST (2019-03-25 14:51:00) 
-- CODE:
a = float(input("Digite o valor de a: "))

b = float(input("Digite o valor de b: "))

c = float(input("Digite o valor de c: "))

total = ((a ** 2) + (b ** 2) + (c ** 2)) / (a + b + c)

print(round(total, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:51:20) 
-- CODE:
a = float(input("Digite o valor de a: "))

b = float(input("Digite o valor de b: "))

c = float(input("Digite o valor de c: "))

total = ((a ** 2) + (b ** 2) + (c ** 2)) / (a + b + c)

print(round(total, 7))
-- EXECUTION TIME:
0.176219
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:15:57) 
-- CODE:
a = int(input("Escreva aqui o valor de a: ))

b = int(input("Escreva aqui o valor de b: "))

c = int(input("Escreva aqui o valor de c: "))

total = ((a ** 2) + (b ** 2) + (c ** 2)) / (a + b + c)
				  
print(round(total, 7))
-- ERROR:
File "XXXX", line 1
    a = int(input("Escreva aqui o valor de a: ))
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:16:15) 
-- CODE:
a = int(input("Escreva aqui o valor de a: "))

b = int(input("Escreva aqui o valor de b: "))

c = int(input("Escreva aqui o valor de c: "))

total = ((a ** 2) + (b ** 2) + (c ** 2)) / (a + b + c)
				  
print(round(total, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:16:35) 
-- CODE:
a = int(input("Escreva aqui o valor de a: "))

b = int(input("Escreva aqui o valor de b: "))

c = int(input("Escreva aqui o valor de c: "))

total = ((a ** 2) + (b ** 2) + (c ** 2)) / (a + b + c)
				  
print(round(total, 7))
-- EXECUTION TIME:
0.215318
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
